<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        tools:context=".MainActivity">

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lay_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressbar"
            app:layout_constraintEnd_toStartOf="@+id/sc_right">

        <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_the_dropdown_nto_select_country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <AutoCompleteTextView
                android:id="@+id/ac_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_label"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/choose_country"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
            android:id="@+id/sc_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toEndOf="@+id/lay_left"
            app:layout_constraintTop_toBottomOf="@id/progressbar">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lay_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_label_population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/population"/>

            <EditText
                    android:id="@+id/edit_population"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_population"
                    app:layout_constraintStart_toStartOf="parent"/>


            <TextView
                    android:id="@+id/tv_label_totalconf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/edit_population"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/total_confirmed"/>

            <EditText
                    android:id="@+id/edit_totalconf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_totalconf"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/tv_label_newconf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/edit_totalconf"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/new_confirmed"/>

            <EditText
                    android:id="@+id/edit_newconf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_newconf"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/tv_label_totaldeath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/edit_newconf"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/total_death"/>

            <EditText
                    android:id="@+id/edit_totaldeath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_totaldeath"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/tv_label_newdeath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/edit_totaldeath"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/new_death"/>

            <EditText
                    android:id="@+id/edit_newdeath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_newdeath"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/tv_label_totalrec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/edit_newdeath"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/total_recovered"/>

            <EditText
                    android:id="@+id/edit_totalrec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_totalrec"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/tv_label_newdrec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/edit_totalrec"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/new_recovered"/>

            <EditText
                    android:id="@+id/edit_newrec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_newdrec"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/tv_lasupdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/edit_newrec"
                    app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>